--- a/index.html
+++ b/index.html
@@ -10,7 +10,25 @@
 </head>
 
 <body>
+    <h1>Exchange Rate Calculator</h1>
+    <p>Choose the currency and amounts to exchange</p>
+    <div class="calculator">
+        <div class="currency">
+            <select id="currency_from">
 
+            </select>
+            <input type="number" id="amount_from" />
+        </div>
+        <div class="swap">
+            <button id="swap" class="btn"></button>
+        </div>
+        <div class="currency">
+            <select id="currency_to">
+
+            </select>
+            <input type="number" id="amount_to" />
+        </div>
+    </div>
 </body>
 
 </html>
