Added new image as svg and updated styling

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <img src="image/image.svg" />
     <h1>Exchange Rate Calculator</h1>
     <p>Choose the currency and amounts to exchange</p>
     <div class="calculator">
